fixed #8263 - make placeholders more legible

--- a/tabby-core/src/theme.new.scss
+++ b/tabby-core/src/theme.new.scss
@@ -81,6 +81,8 @@ $modal-footer-border-color:      transparent;
 $form-check-input-width: 1.4em;
 $form-switch-width: 2.5em;
 
+$input-placeholder-color: var(--theme-fg-more-2);
+
 @import '~bootstrap/scss/bootstrap.scss';
 @import "./theme.vendor.scss";
 
